# active-window-info-to-lanyard

./: .gitignore  CHANGELOG.md  CHANGELOG_UPDATE.md  CONTRIBUTING.md  Cargo.toml  README.md  auto_restart.sh  rustfmt.toml  start.bat  start.sh
docs/: ARCHITECTURE.md  CHEATSHEET.md  ENCRYPTION.md  ICON_EXPORT_GUIDE.md  ICON_EXPORT_SUMMARY.md  LANYARD.md  QUICKSTART.md  config.example.txt
examples/: README.md  export_icons.rs  export_icons_advanced.rs  generate_key.rs  robust_monitor.rs  test_encryption.rs  test_rapid_switch.rs  with_encryption.rs
record/: ENCRYPTION_IMPLEMENTATION.md  MACOS_PERMISSIONS.md
src/: config.rs  crypto.rs  discord.rs  lib.rs  main.rs  parser.rs  window.rs
