[package]
name = "active-window-info-to-lanyard"
version = "0.1.0"
edition = "2024"
authors = ["1733636949a@gmail.com"]
description = "Windows活动窗口监控工具，可将当前窗口信息同步到Discord Rich Presence"
license = "MIT"
repository = "https://github.com/unpain/active-window-info"
keywords = ["discord", "windows", "activity", "rpc", "monitoring"]
categories = ["os", "gui"]
readme = "README.md"

[lib]
name = "cur_win_discord_rust"
path = "src/lib.rs"

[[bin]]
name = "cur-win-discord-rust"
path = "src/main.rs"

[dependencies]
discord-rpc-client = "0.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
chrono = "0.4"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
] }
