[package]
name = "active-window-info-to-lanyard"
version = "0.1.0"
edition = "2024"
authors = ["1733636949a@gmail.com"]
description = "跨平台活动窗口监控工具，可将当前窗口信息同步到Discord Rich Presence (支持 Windows 和 macOS)"
license = "MIT"
repository = "https://github.com/unpain/active-window-info"
keywords = ["discord", "windows", "macos", "activity", "rpc"]
categories = ["os", "gui"]
readme = "README.md"

[lib]
name = "active_window_info_to_lanyard_lib"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
discord-rpc-client = "0.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
chrono = "0.4"
aes-gcm = "0.10"
base64 = "0.21"
rand = "0.8"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
core-foundation = "0.9"
core-graphics = "0.23"
